<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/v_circle"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/circle_bg"
            android:elevation="2dp"
            android:padding="20dp"
            android:src="@drawable/ic_logo" />

        <!--
                <TextView
                    android:id="@+id/tv_congratulations"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="@font/proxima_regular"
                    android:text="@string/congratulations"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="25sp" />-->

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcv_holder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="16dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/proxima_regular"
                    android:text="@string/enter_the_key_provided_to_you"
                    android:textAllCaps="true" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/enter_key">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_key"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/proxima_regular" />


                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_start"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/proxima_regular"
                    android:text="@string/start"
                    android:textStyle="bold"
                    app:rippleColor="@color/colorPrimary" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/silver" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/proxima_regular"
                    android:text="@string/new_user"
                    android:textAllCaps="true" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_free_trial"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:fontFamily="@font/proxima_regular"
                    android:text="@string/free_trial"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_buy"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:fontFamily="@font/proxima_regular"
                    android:text="Purchase key"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>

</FrameLayout>